# energy-stream-pipeline

./: .env.example  .gitignore  DESIGN.md  README.md  docker-compose.yml  kafka-order.txt  pyproject.toml
api/: db.py  main.py  redis_client.py  routes.py
config/: schemas.py  settings.py  topics.py
consumers/: anomaly_consumer.py  context_consumer.py  enrichment_consumer.py  impact_consumer.py  ohlcv_consumer.py  sink_consumer.py  validation_consumer.py
producers/: fred_producer.py  news_producer.py  price_producer.py  shipment_producer.py  weather_producer.py
sql/: init.sql
